name:                servant-jwt-example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ServantJWT
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , servant
                     , text
                     , jwt
                     , wai
                     , data-default
  default-language:    Haskell2010

executable servant-jwt-example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-jwt-example
                     , aeson
                     , text
                     , servant-server
                     , servant
                     , jwt
                     , warp
                     , either
                     , containers
                     , bytestring
                     , data-default
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arianvp/servant-jwt-example
